# plant-minder

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  plantminder.db
.cargo/: config.toml
doc/: part_list.md
pmind-broker/: Cargo.toml  README.md
pmind-broker/src/: broker.rs  lib.rs  monitor.rs  node.rs  router.rs
pmind-broker/src/client/: cli.rs  mod.rs
pmind-tests/: Cargo.toml  README.md
pmind-tests/src/: db_test.rs  i2cmux.rs  thread_mesh.rs
pmindb/: Cargo.toml  README.md
pmindb/migrations/2024-09-02-142310_plants/: down.sql  up.sql
pmindb/src/: broker.rs  db.rs  lib.rs  models.rs  monitor.rs  node.rs  schema.rs
pmindb/src/client/: cli.rs  mod.rs
pmindd/: Cargo.toml  README.md
pmindd/src/: event.rs  lib.rs  minder.rs  ui.rs
pmindd/src/ui/: history.rs  mod.rs
pmindp-esp32-thread/: .gitignore  Cargo.toml  README.md
pmindp-esp32-thread/.cargo/: config.toml
pmindp-esp32-thread/src/: lib.rs  platform.rs  sensor.rs
pmindp-esp32-thread/src/sensor/: atsamd10.rs  bme680.rs  mod.rs  probe_circuit.rs  sht40.rs  st0160.rs  tsl2591.rs
pmindp-sensor/: Cargo.toml
pmindp-sensor/src/: lib.rs
pmindp-thread/: Cargo.toml
pmindp-thread/src/: lib.rs  sensor.rs
src/: lib.rs  soil_sensor.rs
