[package]
name = "plant-minder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37.0", features=["rt-multi-thread", "rt", "macros", "time", "sync"] }
rppal = "0.17.1"
embedded-hal = "0.2"
embedded-hal-async = "1.0.0"
linux-embedded-hal = "0.3"
xca9548a = "0.2.1"
thiserror = "1.0.59"

[[bin]]
path = "./src/bin/main.rs"
name = "plant-minder"