[package]
name = "plant-minder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37.0", features=["rt-multi-thread", "rt", "macros", "time", "sync"] }
rppal = "0.17.1"
embedded-hal = "1.0"
embedded-hal-async = "1.0.0"
linux-embedded-hal = {version = "0.4.0", default-features=false, features=["async-tokio", "i2c"]}
xca9548a = {version="0.2.1", git="https://github.com/nand-nor/xca9548a-rs", branch="add/embedded-hal-async", features=["embedded-hal-async"]}
thiserror = "1.0.59"


[[bin]]
path = "./src/bin/main.rs"
name = "plant-minder"