[package]
name = "pmind-tests"
version = "0.1.0"
edition = "2021"
authors = ["nand-nor <a13xandra.cliff0rd@gmail.com>"]

[dependencies]
tokio = {version = "1.37.0", features=["full"] }
actix = {version = "0.13.5", features=["macros"]}
log = {version= "0.4.21"}
env_logger = {version= "0.11.3"}
pmind-broker = {  path="../pmind-broker"}


[[bin]]
path = "./src/thread_mesh.rs"
name = "broker-mesh-test"
