[package]
name = "pmindb"
version = "0.1.0"
edition = "2021"
authors = ["nand-nor <a13xandra.cliff0rd@gmail.com>"]

[dependencies]
tokio = {version = "1.37.0", features=["rt-multi-thread", "rt", "macros", "time", "sync"] }
async-trait = {version = "0.1.8"}
actix = {version = "0.13.5", features=["macros"]}
coap-lite = {version="0.12.0", features=["udp"]}
ipnet = "2.9.0"
thiserror = {version="1.0.59"}
log = {version= "0.4.21"}
futures = "0.3.30"
rusqlite = { version = "0.31.0", features = ["bundled"] }
pmindp-sensor = {  path="../pmindp-sensor"}
embedded-hal = {version="1.0", optional=true}
embedded-hal-async = {version="1.0.0", optional=true}
linux-embedded-hal = {version = "0.4.0", default-features=false, features=["async-tokio", "i2c"], optional=true}
xca9548a = {version="0.2.1", git="https://github.com/nand-nor/xca9548a-rs", branch="add/embedded-hal-async", features=["embedded-hal-async"], optional=true}
env_logger = {version= "0.11.3"}
#ordered-stream = "0.2.0"
#futures-core = "0.3.30"
#async-stream = "0.3.5"
tokio-stream = "0.1.15"

[features]
default=[]
i2cmux_wired =  ["pmindp-sensor/async_i2cmux", "embedded-hal", "embedded-hal-async", "linux-embedded-hal", "xca9548a"]
thread_mesh = [] 

[[bin]]
path = "./src/bin/i2cmux_wired/main.rs"
name = "plant-minder-wired"
required-features = ["i2cmux_wired"]

[[bin]]
path = "./src/bin/thread_mesh/main.rs"
name = "plant-minder-mesh"
required-features = ["thread_mesh"]
