[package]
name = "pmindd"
version = "0.1.0"
edition = "2021"
authors = ["nand-nor <a13xandra.cliff0rd@gmail.com>"]

[dependencies]
pmindb = {  path="../pmindb"}
pmind-broker = {  path="../pmind-broker"}
pmindp-sensor = {  path="../pmindp-sensor", features=["std"]}
tokio = {version = "1.37.0", features=["full"]}
thiserror = {version="1.0.59"}
env_logger = {version= "0.11.3"}
log = {version= "0.4.21"}
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
futures = "0.3.30"
ratatui = { version = "0.27.0", features = ["all-widgets", "serde"]}
actix = {version = "0.13.5", features=["macros"]}
tokio-stream = "0.1.15"
chrono = {version="0.4.38"}
hex = "0.4.3"
tracing-subscriber = "0.3.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"

[[bin]]
path = "./src/bin/main.rs"
name = "plant-minder"

[features]
default = ["database"]
database = []
