[package]
name = "pmindp-esp32-thread"
version = "0.1.0"
edition = "2021"
authors = ["nand-nor <a13xandra.cliff0rd@gmail.com>"]

[dependencies]
bitflags = "2.6.0"
cfg-if = "1.0.0"
embedded-hal = {version = "1.0.0"} 
embedded-hal-bus = {version = "0.2.0" }
esp-hal = {version= "0.20.1", git = "https://github.com/esp-rs/esp-hal.git"}
esp-backtrace = { version="0.14.0", git = "https://github.com/esp-rs/esp-hal.git", features = ["panic-handler", "exception-handler", "println"]}
esp-println       = { version= "0.11.0", git = "https://github.com/esp-rs/esp-hal.git", features = ["log"]}
esp-ieee802154 = {version= "0.2.0", git = "https://github.com/esp-rs/esp-hal.git"}
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal.git"}
esp-alloc = { version="0.4.0", git = "https://github.com/esp-rs/esp-hal.git"} 
log = {version= "0.4.21"}
heapless = {version= "0.8.0"}
no-std-net = {version= "0.6.0"}
critical-section = {version= "1.1.0"}
smart-leds = {version= "0.4.0" }
esp-openthread = { version= "0.2.0", git = "https://github.com/nand-nor/esp-openthread.git", branch="add-more-mtd-support"}
coap-lite = {version="0.12.0", features=["udp"],default-features=false}
pmindp-sensor = {  path="../pmindp-sensor"}
serde_json = {version = "1.0", default-features=false, features = ["alloc"] } 
bme680 = {version = "0.7.0",  git = "https://github.com/nand-nor/bme680.git", branch="bump-embedded-hal-dep"}
toml-cfg = {version= "0.2.0"}
static_cell = "2.1.0"
sht4x = { version = "0.2.0", git = "https://github.com/hawkw/sht4x", branch="eliza/embedded-hal-1.0"}

[features]
default = []
esp32c6 = [ "esp-hal/esp32c6", "esp-ieee802154/esp32c6", "esp-openthread/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6", "esp-hal-smartled/esp32c6" ]
esp32h2 = [ "esp-hal/esp32h2", "esp-ieee802154/esp32h2", "esp-openthread/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2", "esp-hal-smartled/esp32h2" ]
probe-circuit = []
atsamd10 = []
st0160 = []
tsl2591 = []
bme680 = []
sht40 = []